18. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- set medianame on adding new media at cd/dvd type fixed
	- use cdrom path for cd/dvd instead of selected path in tree
	- menu entries for resort catalog in descending order (number, time) added

17. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- sort by number, time and type fixed
	- sort state will now saved to catalog
	- display sort state in commwidget added

12. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- datatype on reading at reading double from xml fixed
	- code cleanup
	- set special config settings on autoload on db correctly
	- create pww on mainwidget instead on guibase
	- display progressdialog on save/saveas added
	- progressdialog fixes
	- speedup catalog line detection on catalog reading
	- status info about supported image extensions on selreadable dialog added
	- display supported image extensions on console if debug info is enabled
	- keep ".." entry always as first entry on sort listview on change on 3. column
	- version increased to 2.0

11. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- display tree childs open fixed
	- use default selected color for listview
	- compiler warnings reduced
	- prevent a crash on close if catalog is currently loading
	- wrong icon on adding history element on save catalog fixed
	- importing media date for adding new media on gtktalog xml import fixed
	- display busy cursor during dir read in adddialog added

11. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- scanning / fixed
	- set media name automaticlly if / is selected
	- size of progressdialog fixed
	- hide read errors prepared
	- crash at start fixed

10. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- folter tree after import now works again
	- dont scan archive if disabled in config
	- option for display current scanned file (reading mediainfo, scanning archive) in tray added
	- help dialog reworked
	- load/save display current scanned file in tray fixed